Fix Spotify/user panel container overflow bug

--- a/src/main.css
+++ b/src/main.css
@@ -1386,6 +1386,8 @@ div[style="display: flex; justify-content: space-between; align-items: center; m
   gap: 0px;
   padding: 0;
   margin: 0;
+  border-radius: calc(8px + 2px * 2 * var(--enable-client-border));
+  overflow: hidden;
   background: transparent !important;
 
   & > .avatarWrapper_ba5175 {
@@ -1401,7 +1403,6 @@ div[style="display: flex; justify-content: space-between; align-items: center; m
     width: 100%;
     justify-content: center;
     gap: 0px;
-    box-sizing: border-box;
 
     & > button {
       height: 40px;
